Overlapping issue in wordCloud

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,8 @@ svg circle {
 }
 
 .incloud{
-    font-family: Lato;
+    text-anchor: middle;
+    font-family: "Comic Sans MS";
 }
 
 body {
